--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc"
+    "build": "tsc",
+    "docs": "typedoc"
   },
   "keywords": [
     "SDK",
@@ -22,6 +23,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "typedoc": "^0.27.6",
+    "typedoc-plugin-markdown": "^4.4.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.2"
   },
