--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prepare": "npm run build",
-    "build": "rm -rf dist && microbundle --tsconfig tsconfig.json --no-sourcemap",
-    "docs": "typedoc"
+    "build": "microbundle --tsconfig tsconfig.json --no-sourcemap",
+    "docs": "typedoc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "SDK",
@@ -18,13 +21,18 @@
   "author": "LSaints",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.17.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.4",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
     "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "typedoc": "^0.27.6",
     "typedoc-plugin-markdown": "^4.4.0",
     "typescript": "^5.7.2",
@@ -112,6 +120,7 @@
     "synckit": "^0.9.2",
     "to-regex-range": "^5.0.1",
     "ts-api-utils": "^1.4.3",
+    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "type-check": "^0.4.0",
     "uri-js": "^4.4.1",
